--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/2ddgamekit.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2ddgamekit.data.br",
-        frameworkUrl: buildUrl + "/2ddgamekit.framework.js.br",
-        codeUrl: buildUrl + "/2ddgamekit.wasm.br",
+        dataUrl: buildUrl + "/2ddgamekit.data",
+        frameworkUrl: buildUrl + "/2ddgamekit.framework.js",
+        codeUrl: buildUrl + "/2ddgamekit.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (1) first",
